...
    let titleText = UILabel()
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.backgroundColor = .white
        titleText.text = "Cats"
        tableView.accessibilityIdentifier = "breedsCats"
        titleText.accessibilityIdentifier = "catsLabel"
        tableView.delegate = self
               tableView.dataSource = self
               titleText.font = titleText.font.withSize(30)
        view.addSubview(titleText)
        view.addSubview(tableView)
               titleText.snp.makeConstraints {
...
