import UIKit
import Combine
class ViewController: UIViewController {
    let card: Card = {
        let card = Card()
        card.accessibilityIdentifier = "Card"
        return card
    }()

    let catFetcher = CatAPIService()
    let spinner: Spinner = {
        let spinner = Spinner()
        spinner.accessibilityIdentifier = "Spinner" 
        return spinner
    }()
    var cancellable = Set<AnyCancellable>()
    let buttonLike: UIButton = {
        let button = UIButton(type: .system)
        button.setImage(UIImage(systemName: "heart.circle", withConfiguration:
...
