...
        }()
    let titleText = UILabel()
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.backgroundColor = .white
        tableView.accessibilityIdentifier = "catsImages"
        titleText.accessibilityIdentifier = "likedLabel"
        titleText.text = "Liked Cats"
        tableView.delegate = self
               tableView.dataSource = self
               titleText.font = titleText.font.withSize(30)
        
        view.addSubview(titleText)
...
